--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GameNews</string>
+    <string name="tab_1">Stories</string>
+    <string name="tab_2">Video</string>
+    <string name="tab_3">Favorites</string>
 </resources>
